@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 5), dpkg-dev (>= 1.14.10), po-debconf, dpatch,
  libcurl4-gnutls-dev (>= 7.18.2-5) | libcurl4-gnutls-dev (<= 7.18.2-1) | libcurl3-gnutls-dev,
  libdbi0-dev,
  libesmtp-dev,
- libganglia1-dev (>= 3),
+ libganglia1-dev (>= 3) [!kfreebsd-i386 !kfreebsd-amd64],
  libgcrypt11-dev,
  libglib2.0-dev,
  libhal-dev,
@@ -27,11 +27,11 @@ Build-Depends: debhelper (>= 5), dpkg-dev (>= 1.14.10), po-debconf, dpatch,
  libsnmp-dev (>= 5.4.2.1~dfsg-4~) | libsnmp-dev | libsnmp9-dev,
  libsnmp-dev (>= 5.4.2.1~dfsg-4~) | perl (<< 5.10.1~rc2-1~),
  libupsclient1-dev,
- libvirt-dev (>= 0.4.0-6),
+ libvirt-dev (>= 0.4.0-6) [!kfreebsd-i386 !kfreebsd-amd64],
  libxml2-dev,
  libyajl-dev,
  linux-libc-dev (>= 2.6.25-4) [!kfreebsd-i386 !kfreebsd-amd64] | linux-libc-dev (<< 2.6.25-1) [!kfreebsd-i386 !kfreebsd-amd64],
- openjdk-6-jdk [!hppa],
+ openjdk-6-jdk [!hppa !kfreebsd-i386 !kfreebsd-amd64],
  python-dev
 Build-Conflicts: libpthread-dev
 Standards-Version: 3.8.3
